[project]
name = "workflow-runner"
version = "1.0.0"
description = "YAML-configurable LLM workflow runner with hard constraints"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
wfr = "runner:main"
workflow-runner = "runner:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
